ushop update added ushop manager

--- a/public_html/admin/Common/langs/en.json
+++ b/public_html/admin/Common/langs/en.json
@@ -48,6 +48,9 @@
 	},
 
 	"ushop" : {
+		"cancel" : "Click to cancel",
+		"save" : "Click to save",
+		"back" : "Click to go back"
 	},
 	
 	"tooltips" : {
